force-app/main/default/objects/PBS_gBUILD_ProjectPerformanceCashflow__c/PBS_gBUILD_ProjectPerformanceCashflow__c.object-meta.xml
<CustomObject>
    <description>gBUILD Project Financials: Performance Perios Cashflow Data</description>
    <label>gBUILD Project Perf Period Cashflow</label>
    <nameField>
        <displayFormat>gbPppc_{00000}</displayFormat>
        <label>gBuildCashflow</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>gBUILD Project Perf Period Cashflows</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>