force-app/main/default/objects/PBS_gBUILD_ProjectPerformanceCashflow__c/fields/AnnualContractorPayments__c.field-meta.xml
<CustomField>
    <fullName>AnnualContractorPayments__c</fullName>
    <description>Annual Contractor Payments</description>
    <inlineHelpText>Annual Contractor Payments</inlineHelpText>
    <label>Annual Contractor Payments ($)</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>