force-app/main/default/objects/PBS_gBUILD_ProjectPerformanceCashflow__c/fields/EstimatedAnnualCostSav__c.field-meta.xml
<CustomField>
    <fullName>EstimatedAnnualCostSav__c</fullName>
    <description>Estimated Annual Cost Savings</description>
    <inlineHelpText>Enter estimated annual cost savings.</inlineHelpText>
    <label>Estimated Annual Cost Savings ($)</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>