force-app/main/default/objects/PBS_gBUILD_ProjectPerformanceCashflow__c/fields/ProposedGuaranteedAnnualCostSav__c.field-meta.xml
<CustomField>
    <fullName>ProposedGuaranteedAnnualCostSav__c</fullName>
    <description>Proposed Guaranteed Annual Cost Savings</description>
    <inlineHelpText>Enter proposed guaranteed annual cost savings.</inlineHelpText>
    <label>Guaranteed Annual Cost Savings ($)</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>