force-app/main/default/objects/PBS_gBUILD_ProjectPerformanceCashflow__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>Performance Year of Post Acceptance</description>
    <inlineHelpText>Performance Year of Post Acceptance</inlineHelpText>
    <label>Year</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>