force-app/main/default/objects/PBS_gBUILD_ProjectPerformanceCashflow__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Year__c</columns>
    <columns>EstimatedAnnualCostSav__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>